# openCV

./: .gitignore  CMakeLists.txt  main.cpp
